[metadata]
name = ncigrafana
author = Aidan Heerdegen
author-email = aidan.heerdegen@anu.edu.au
summary = Ingest NCI HPC resource dumps
description-file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    ncigrafana

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[entry_points]
console_scripts =
    parse_user_storage_data = ncigrafana.parse_user_storage_data:main_argv
    parse_account_usage_data = ncigrafana.parse_account_usage_data:main_argv
    nci_account_json = ncigrafana.nci_account:main_argv

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
